Add extra test